deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gophish-v1
  namespace: gophish
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gophish-v1
  template:
    metadata:
      labels:
        app: gophish-v1
    spec:
      containers:
        - name: gophish-v1
          image: yourdocker.registry.url/gophish:tag
          ports:
            - containerPort: 3333
              name: admin
              protocol: TCP
            - containerPort: 8443
              name: http
              protocol: TCP
          volumeMounts:
            - name: ssl-certs
              mountPath: "/etc/gophish/certs"
              readOnly: true
          readinessProbe:
            httpGet:
              path: /login
              port: 3333
              scheme: HTTPS
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            initialDelaySeconds: 70
            timeoutSeconds: 60
          livenessProbe:
            httpGet:
              path: /login
              port: 3333
              scheme: HTTPS
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            initialDelaySeconds: 70
            timeoutSeconds: 60
      volumes:
        - name: ssl-certs
          secret:
            secretName: yourdomain-com-cert
